# pytest_xfiles

./: .gitignore  LICENSE  README.rst  pytest_xfiles.py  requirements.txt  setup.cfg  tox.ini
tests/: __init__.json  __init__.yaml  conftest.py  test_csv.codes.csv  test_csv.py  test_httpbin.get.yaml  test_httpbin.py  test_httpbin.status.yaml  test_var_request.happy.yaml  test_var_request.indir.yaml  test_var_request.list.yaml  test_var_request.package_yaml.yaml  test_var_request.py  test_var_request.yaml  test_xfile.json  test_xfile.jsonfile.json  test_xfile.py
tests/shake/: __init__.yaml  conftest.py  test_classy_author.py  test_romeoyjulieta.py  test_romeoyjulieta.romeo.yaml  test_romeoyjulieta.yaml
tests/shakespeare/: test_othello.desdemona.yaml  test_othello.othello.yaml  test_othello.py  test_othello.yaml  test_romeoyjulieta.julieta.yaml  test_romeoyjulieta.py
tests/sub/: test_diver.happy.yaml  test_diver.list.yaml  test_diver.py  test_diver.yaml
