[metadata]
name = pytest_xfiles
author = Jan Vlčinský
author-email = jan.vlcinsky@tamtamresearch.com
summary = Pytest fixtures providing data read from function, module or package related (x)files.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
classifier =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
home-page = http://tamtamresearch.com
keywords = 
    pytest
    xfile
    json
    yaml
[files]
modules =
    pytest_xfiles
[entry_points]
pytest11 =
    xfiles = pytest_xfiles
[extras]
yaml =
    pyyaml
